# django-dashboarder

./: MANIFEST.in  README.md  pyproject.toml  setup.py
dashboarder/: tests.py
dashboarder/templates/admin/: 500.html  actions.html  app_index.html  base.html  base_site.html  change_form.html  change_list.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  invalid_setup.html  login.html  object_history.html  search_form.html  submit_line.html
dashboarder/templates/admin/auth/user/: change_password.html
dashboarder/templates/admin/includes/: fieldset.html
dashboarder/templates/admin/widgets/: related_widget_wrapper.html  split_datetime.html
dashboarder/templates/registration/: logged_out.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
