[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dashboarder"
version = "0.1.2"
description = "A Django app to create fancy admin interface."
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "William Oliveira de Lagos", email = "william.lagos@icloud.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://williamlagos.github.io/"

[tool.setuptools.packages.find]
where = ["."]
include = ["dashboarder*"]

[tool.setuptools.package-data]
dashboarder = ["templates/**/*", "static/**/*"]
